# prom_client_generics

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.py  setup.cfg  setup.py
flask_app/: app.py
prom_client/: client.py  default_labels.py  flask.py
