[build-system]
requires = ["setuptools>=61.0", "prometheus_client", "prometheus-flask-exporter"]
build-backend = "setuptools.build_meta"

[project]
name = "prom_client_generics"
version = "0.0.1"
authors = [
  { name="Hashim Colombowala", email="hashim@hey.com" },
]
description = "Prometheus package to add default labels"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hash167/prometheus_client_extension"
"Bug Tracker" = "https://github.com/hash167/prometheus_client_extension/issues"